@@ -11,7 +11,6 @@ const VAL: &str = r#"
 		"world",
 		"world"
 	],
-	"null": null,
 	"obj": {
 		"hello": "world",
 		"number": 128181684654,
@@ -22,7 +21,6 @@ const VAL: &str = r#"
 			"world",
 			"world"
 		],
-		"null": null,
 		"obj": {
 			"hello": "world",
 			"number": 128181684654,
@@ -32,8 +30,7 @@ const VAL: &str = r#"
 				"hello",
 				"world",
 				"world"
-			],
-			"null": null
+			]
 		}
 	}
 }
@@ -54,7 +51,6 @@ fn gen_parser() -> MessyJson {
                 "bool".to_string(),
                 MessyJson::Bool(MessyJsonScalar::new(false)),
             ),
-            ("null".to_string(), MessyJson::Null),
             (
                 "array".to_string(),
                 MessyJson::Array(Box::new(MessyJsonArray::new(
@@ -81,7 +77,6 @@ fn gen_parser() -> MessyJson {
                 "bool".to_string(),
                 MessyJson::Bool(MessyJsonScalar::new(false)),
             ),
-            ("null".to_string(), MessyJson::Null),
             (
                 "array".to_string(),
                 MessyJson::Array(Box::new(MessyJsonArray::new(
@@ -112,7 +107,6 @@ fn gen_parser() -> MessyJson {
                 "bool".to_string(),
                 MessyJson::Bool(MessyJsonScalar::new(false)),
             ),
-            ("null".to_string(), MessyJson::Null),
             (
                 "array".to_string(),
                 MessyJson::Array(Box::new(MessyJsonArray::new(
@@ -317,57 +311,6 @@ fn mismatch_array() {
 			"world"
 		],
 		"null": null,
-		"obj": {
-			"hello": "world",
-			"number": 128181684654,
-			"bool": true,
-			"array": [
-				"hello",
-				"hello",
-				"world",
-				"world"
-			],
-			"null": null,
-			"obj": {
-				"hello": "world",
-				"number": 128181684654,
-				"bool": true,
-				"array": [
-					"hello",
-					"hello",
-					"world",
-					"world"
-				],
-				"null": null
-			}
-		}
-	}
-	"#;
-    let parsed_value: serde_json::Value = serde_json::from_str(bogus_value).unwrap();
-    let parsed: MessyJsonValueContainer = parser.builder().deserialize(&mut deserializer).unwrap();
-    assert_eq!(
-        parsed.inner().eq(&parsed_value),
-        false,
-        "obj comparaison problem"
-    );
-}
-
-#[test]
-fn mismatch_null() {
-    let parser = gen_parser();
-    let mut deserializer = serde_json::Deserializer::from_str(VAL);
-    let bogus_value = r#"
-	{
-		"hello": "world",
-		"number": 126354,
-		"bool": true,
-		"array": [
-			"hello",
-			"hello",
-			"world",
-			"world"
-		],
-		"null": true,
 		"obj": {
 			"hello": "world",
 			"number": 128181684654,
